# RAGScaleGuard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRADEMARKS.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
configs/: default.yaml  enterpriserag_bench.yaml  local_corpus.yaml  ragscaleguard-http.example.json  ragscaleguard-jsonl.example.json
docs/: architecture.md  dashboard_walkthrough.md  enterprise_risk_diagnostics.md  evaluation_methodology.md  integrations.md  limitations.md  reporting_schema.md  roadmap.md  security_governance.md
examples/: README_langchain.md  README_reranking.md  integrate_existing_retriever.py  langchain_end_to_end.py  minimal_local_demo.py  reranking_diagnostics.py  run_enterpriserag_bench.py  run_local_corpus.py  serve_dashboard.py
examples/dashboard/: app.js  index.html  styles.css
examples/fixtures/: questions.jsonl  retrieval-runs.jsonl
src/ragscaleguard/: __init__.py  cli.py  models.py  text.py
src/ragscaleguard/adapters/: __init__.py  base.py  frameworks.py  generic.py  http.py  jsonl.py
src/ragscaleguard/adviser/: __init__.py  base.py  local_openai.py  (+2 more)
tests/: test_adviser_policy.py  test_comparison.py  test_conflict_detection.py  test_dashboard_assets.py  test_dashboard_server.py  test_density_analysis.py  test_documentation_integrations.py  test_enterprise_risks.py  test_hybrid_retrieval.py  test_integration_guard.py  test_metrics.py  test_report_security.py  test_reranking_diagnostics.py  test_retrieval_edge_cases.py  test_universal_adapters.py
(+24 files in other folders)
